[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["chmiller <chris.wayne.miller@gmail.com>"]
readme = "README.md"
packages = [{include = "ice_breaker"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.178"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^0.27.7"
google-search-results = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
