[tool.poetry]
name = "ice-breaker"
version = "0.1.0"
description = ""
authors = ["chmiller <chris.wayne.miller@gmail.com>"]
readme = "README.md"
packages = [{include = "ice_breaker"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.181"
requests = "^2.31.0"
black = "^23.3.0"
tweepy = "^4.14.0"
flask = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
